Added Countdown & updated anime

--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,6 +33,27 @@
             android:orientation="vertical"
             android:visibility="gone"
             tools:visibility="visible">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/mediaInfoCountdownContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="-16dp"
+                android:visibility="gone"
+                app:cardBackgroundColor="?attr/colorPrimary"
+                app:cardCornerRadius="0dp">
+
+                <TextView
+                    android:id="@+id/mediaInfoCountdown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="?attr/colorOnPrimary" />
+            </androidx.cardview.widget.CardView>
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -224,6 +246,7 @@
                         android:alpha="0.58"
                         android:text="@string/season"
                         android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/mediaInfoSeason"
                         android:layout_width="0dp"
@@ -265,7 +288,7 @@
                         android:alpha="0.58"
                         android:text="@string/end_date"
                         android:textStyle="bold" />
-                    
+
                     <TextView
                         android:id="@+id/mediaInfoEnd"
                         android:layout_width="0dp"
