--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -85,14 +85,63 @@
                 android:text="@string/trending_anime"
                 android:textSize="16sp" />
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/animeTrendingViewPager"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="192dp"
-                android:clipChildren="false"
-                android:clipToPadding="false"
-                android:paddingStart="32dp"
-                android:paddingEnd="32dp" />
+                android:layout_height="match_parent">
+
+                <ProgressBar
+                    android:id="@+id/animeTrendingProgressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/animeTrendingViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="192dp"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
+                    android:paddingStart="32dp"
+                    android:paddingEnd="32dp" />
+            </FrameLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:fontFamily="@font/poppins_bold"
+                android:padding="8dp"
+                android:text="@string/updated"
+                android:textSize="16sp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ProgressBar
+                    android:id="@+id/animeUpdatedProgressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="90dp" />
+
+                <ani.saikou.FadingEdgeRecyclerView
+                    android:id="@+id/animeUpdatedRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="true"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:requiresFadingEdge="horizontal"
+                    tools:itemCount="4"
+                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/item_media_compact"
+                    tools:orientation="horizontal" />
+
+            </FrameLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -114,6 +163,10 @@
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="true"
                     android:paddingStart="8dp"
+                    tools:itemCount="4"
+                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/item_media_large"
+                    tools:orientation="vertical"
                     android:paddingEnd="8dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
