--- a/app/src/main/res/layout/fragment_anime_source.xml
+++ b/app/src/main/res/layout/fragment_anime_source.xml
@@ -33,6 +33,28 @@
             android:visibility="gone"
             tools:visibility="visible">
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/animeSourceCountdownContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="-16dp"
+                android:visibility="gone"
+                app:cardBackgroundColor="?attr/colorPrimary"
+                app:cardCornerRadius="0dp">
+
+                <TextView
+                    android:id="@+id/animeSourceCountdown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:fontFamily="@font/poppins_bold"
+                    tools:text="Next Episode will be released in \n00:00:00"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="?attr/colorOnPrimary" />
+            </androidx.cardview.widget.CardView>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
