--- a/app/src/main/res/layout/item_episode_list.xml
+++ b/app/src/main/res/layout/item_episode_list.xml
@@ -11,85 +11,93 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:cardBackgroundColor="@color/nav_bg"
-            app:cardCornerRadius="16dp">
-
-            <ProgressBar
-                style="?android:attr/progressBarStyle"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="center"
-                android:indeterminate="true" />
-
-            <ImageView
-                android:id="@+id/itemEpisodeImage"
-                android:layout_width="180dp"
-                android:layout_height="109dp"
-                android:layout_gravity="center"
-                android:scaleType="centerCrop"
-                tools:ignore="ContentDescription" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="-12dp"
-                android:layout_marginBottom="-20dp"
-                app:cardBackgroundColor="@color/bg_opp"
-                app:cardCornerRadius="16dp">
-
-                <TextView
-                    android:id="@+id/itemEpisodeNumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="16dp"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/bg"
-                    android:textSize="20sp"
-                    tools:text="12" />
-            </androidx.cardview.widget.CardView>
-
-        </androidx.cardview.widget.CardView>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:gravity="center"
-            android:minHeight="92dp"
-            android:orientation="vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/itemEpisodeTitle"
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:fontFamily="@font/poppins_bold"
-                android:maxLines="2"
-                android:text="@string/empty"
-                app:lineHeight="15sp" />
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="@color/nav_bg"
+                app:cardCornerRadius="16dp">
 
-            <TextView
-                android:id="@+id/itemEpisodeDesc"
+                <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:indeterminate="true" />
+
+                <ImageView
+                    android:id="@+id/itemEpisodeImage"
+                    android:layout_width="180dp"
+                    android:layout_height="109dp"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ContentDescription" />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginStart="-12dp"
+                    android:layout_marginBottom="-20dp"
+                    app:cardBackgroundColor="@color/bg_opp"
+                    app:cardCornerRadius="16dp">
+
+                    <TextView
+                        android:id="@+id/itemEpisodeNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="@font/poppins_bold"
+                        android:textColor="@color/bg"
+                        android:textSize="20sp"
+                        tools:text="12" />
+                </androidx.cardview.widget.CardView>
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:alpha="0.58"
-                android:ellipsize="end"
-                android:maxLines="4"
-                android:textStyle="italic"
-                app:lineHeight="16sp"
-                tools:ignore="TextContrastCheck" />
+                android:layout_margin="8dp"
+                android:gravity="center"
+                android:minHeight="92dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/itemEpisodeTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="@string/empty"
+                    app:lineHeight="15sp" />
+
+            </LinearLayout>
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/itemEpisodeDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha="0.58"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:padding="16dp"
+            app:lineHeight="16sp"
+            tools:ignore="TextContrastCheck"
+            tools:text="@tools:sample/lorem/random" />
 
     </LinearLayout>
 
