--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -100,12 +100,115 @@
                     android:id="@+id/animeTrendingViewPager"
                     android:layout_width="match_parent"
                     android:layout_height="192dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
                     android:clipChildren="false"
                     android:clipToPadding="false"
                     android:paddingStart="32dp"
                     android:paddingEnd="32dp" />
             </FrameLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/animeGenre"
+                    android:layout_width="0dp"
+                    android:layout_height="72dp"
+                    android:layout_margin="16dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="16dp">
+
+                    <ImageView
+                        android:id="@+id/animeGenreImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        tools:ignore="ContentDescription"
+                        tools:src="@tools:sample/backgrounds/scenic" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0.6"
+                        android:background="@color/bg_black" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/poppins_bold"
+                            android:text="@string/genres"
+                            android:textAllCaps="true"
+                            android:textColor="@color/bg_white"
+                            android:textSize="16sp" />
+
+                        <View
+                            android:layout_width="64dp"
+                            android:layout_height="2dp"
+                            android:layout_gravity="center"
+                            android:background="?attr/colorPrimary" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/animeTopScore"
+                    android:layout_width="0dp"
+                    android:layout_height="72dp"
+                    android:layout_margin="16dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="16dp">
+
+                    <ImageView
+                        android:id="@+id/animeTopScoreImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        tools:ignore="ContentDescription"
+                        tools:src="@tools:sample/backgrounds/scenic" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0.6"
+                        android:background="@color/bg_black" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/poppins_bold"
+                            android:text="@string/top_score"
+                            android:textAllCaps="true"
+                            android:textColor="@color/bg_white"
+                            android:textSize="16sp" />
+
+                        <View
+                            android:layout_width="64dp"
+                            android:layout_height="2dp"
+                            android:layout_gravity="center"
+                            android:background="?attr/colorPrimary" />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -114,7 +217,6 @@
                 android:padding="8dp"
                 android:text="@string/updated"
                 android:textSize="16sp" />
-
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
