--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -2,20 +2,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="32dp"
     android:focusable="false">
 
-    <com.alexvasilkov.gestures.views.GestureImageView
+    <ImageView
         android:id="@+id/imgProgImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:background="@color/bg"
         android:focusable="false"
         android:minHeight="100dp"
         android:scaleType="fitCenter"
-        tools:ignore="ContentDescription,ImageContrastCheck"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:ignore="ContentDescription,ImageContrastCheck" />
 
     <ProgressBar
         android:id="@+id/imgProgProgress"
