--- a/app/src/main/res/drawable/ic_anilist.xml
+++ b/app/src/main/res/drawable/ic_anilist.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="25.481"
+    android:viewportHeight="23.97">
   <path
-      android:fillColor="@color/bg"
-      android:pathData="M6.361,2.943L0,21.056h4.942l1.077,-3.133L11.4,17.923l1.052,3.133L22.9,21.056c0.71,0 1.1,-0.392 1.1,-1.101L24,17.53c0,-0.71 -0.39,-1.101 -1.1,-1.101h-6.483L16.417,4.045c0,-0.71 -0.392,-1.102 -1.101,-1.102h-2.422c-0.71,0 -1.101,0.392 -1.101,1.102v1.064l-0.758,-2.166zM8.685,8.891l1.688,5.018L7.144,13.909z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M13.053,5.105C13.053,4.491 13.391,4.152 14.005,4.152L16.638,4.152C17.251,4.152 17.59,4.491 17.59,5.105L17.59,15.815L23.197,15.815C23.811,15.815 24.148,16.153 24.148,16.767L24.148,18.865C24.148,19.478 23.811,19.817 23.197,19.817L17.813,19.817L13.053,5.992L13.053,5.105ZM12.102,19.817L11.192,17.107L6.539,17.107L5.607,19.817L1.333,19.817L6.834,4.152L10.96,4.152L16.355,19.817L12.102,19.817ZM7.511,13.636L10.304,13.636L8.844,9.296L7.511,13.636Z"/>
 </vector>
