--- a/app/src/main/res/layout/item_chapter_list.xml
+++ b/app/src/main/res/layout/item_chapter_list.xml
@@ -42,7 +42,9 @@
                     android:id="@+id/itemChapterNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
                     android:fontFamily="@font/poppins_bold"
+                    android:singleLine="true"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -53,7 +55,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:ellipsize="end"
             android:fontFamily="@font/poppins_bold"
+            android:singleLine="true"
             android:textSize="16sp" />
 
     </LinearLayout>
