--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,10 @@
     <color name="pink_200">#FF5DAE</color>
     <color name="pink_500">#FF007F</color>
     <color name="pink_700">#C50053</color>
-    <color name="violet_400">#7366FF</color>
-    <color name="violet_700">#3D3DCC</color>
-    <color name="bg_black">#1F1F1F</color>
-    <color name="bg_white">#E9E8F0</color>
+    <color name="violet_400">#91A6FF</color>
+    <color name="violet_700">#3358FF</color>
+    <color name="bg_black">#212738</color>
+    <color name="bg_white">#EEEEEE</color>
     <color name="bg">@color/bg_white</color>
     <color name="bg_opp">@color/bg_black</color>
     <color name="nav_bg">#fff</color>
