Implement Search for sources.

--- a/app/src/main/res/layout/fragment_manga_source.xml
+++ b/app/src/main/res/layout/fragment_manga_source.xml
@@ -120,6 +120,7 @@
                     tools:text="@string/get_recommendations" />
 
                 <TextView
+                    android:id="@+id/mangaSourceSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
