- Implemented List Viewing - Fixed alot of crashes related to rotating & other shenanigans - Fixed Progressbar in search activity - Allow user to always get adult media details - Fixed Genre loading, now its the 1st thing app does.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bg"
@@ -7,22 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ProgressBar
+        android:id="@+id/mainProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent" />
 
     <FrameLayout
         android:id="@+id/navbar_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_gravity="bottom">
 
         <nl.joery.animatedbottombar.AnimatedBottomBar
             android:id="@+id/navbar"
@@ -32,15 +33,16 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/bottom_nav"
-            android:padding="8dp"
             android:elevation="4dp"
+            android:padding="8dp"
             android:translationZ="12dp"
-            app:abb_animationDuration="300"
+            android:visibility="gone"
 
+            app:abb_animationDuration="300"
             app:abb_animationInterpolator="@anim/over_shoot"
             app:abb_badgeBackgroundColor="#F44336"
-            app:abb_indicatorColor="?attr/colorSecondary"
 
+            app:abb_indicatorColor="?attr/colorSecondary"
             app:abb_indicatorLocation="bottom"
             app:abb_indicatorMargin="28dp"
             app:abb_selectedTabType="text"
@@ -48,17 +50,13 @@
             app:abb_tabColorDisabled="@color/nav_tab_disabled"
             app:abb_tabColorSelected="?attr/colorPrimary"
             app:abb_tabs="@menu/bottom_navbar_menu"
-            app:abb_textAppearance="@style/NavBarText" />
+            app:abb_textAppearance="@style/NavBarText"
+            tools:visibility="visible" />
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        android:layout_height="match_parent">
     </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
