--- a/app/src/main/res/layout/fragment_manga.xml
+++ b/app/src/main/res/layout/fragment_manga.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    tools:context=".AnimeFragment">
+    tools:context=".MangaFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/mangaScroll"
@@ -259,20 +259,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.recyclerview.widget.RecyclerView
+                <ani.saikou.FadingEdgeRecyclerView
                     android:id="@+id/mangaPopularRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="true"
-                    android:paddingStart="8dp"
+                    android:requiresFadingEdge="vertical"
+                    android:padding="8dp"
                     tools:itemCount="4"
                     tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_media_large"
-                    tools:orientation="vertical"
-                    android:paddingEnd="8dp">
-
-                </androidx.recyclerview.widget.RecyclerView>
+                    tools:orientation="vertical" />
 
                 <ProgressBar
                     android:id="@+id/mangaPopularProgress"
