--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -53,11 +53,12 @@
                 android:layout_gravity="bottom"
                 android:layout_marginStart="156dp"
                 android:layout_marginEnd="32dp"
-                android:ellipsize="marquee"
+                android:ellipsize="end"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:fontFamily="@font/poppins_bold"
                 android:marqueeRepeatLimit="marquee_forever"
+                android:maxLines="3"
                 android:scrollHorizontally="false"
                 android:singleLine="false"
                 android:text="@string/slogan"
